--- a/index.html
+++ b/index.html
@@ -2,47 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ShadowPulse X</title>
   <style>
     body {
       margin: 0;
-      background: #050505;
-      font-family: monospace;
-      color: #0ff;
+      background: #0a0a0a;
+      color: #f5f5f5;
+      font-family: 'Courier New', monospace;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      text-align: center;
       overflow: hidden;
     }
-    .glow-box {
-      border: 2px solid #0ff;
-      padding: 2rem;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #0ff, 0 0 60px #0ff3;
-      animation: pulse 3s ease-in-out infinite alternate;
+
+    .glitch-text {
+      font-size: 2em;
+      letter-spacing: 2px;
+      animation: fadeIn 2s ease-in;
     }
-    h1 {
-      font-size: 2.5rem;
-      text-shadow: 0 0 10px #0ff, 0 0 30px #0ff;
-    }
-    p {
-      color: #0ffb;
-      margin-top: 1rem;
-      font-weight: 500;
-    }
-    @keyframes pulse {
-      0% { box-shadow: 0 0 20px #0ff; }
-      100% { box-shadow: 0 0 40px #0ff, 0 0 80px #0ff; }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
   </style>
 </head>
 <body>
-  <div class="glow-box">
-    <h1>ShadowPulse X</h1>
-    <p>Live from the dark side. More loading soon...</p>
-  </div>
+  <h1 class="glitch-text" id="introText"></h1>
+
+  <script>
+    const text = "Live from the dark side...";
+    let i = 0;
+
+    function typeEffect() {
+      if (i < text.length) {
+        document.getElementById("introText").innerHTML = text.substring(0, i + 1);
+        i++;
+        setTimeout(typeEffect, 100);
+      }
+    }
+
+    window.onload = typeEffect;
+  </script>
 </body>
-  </html>
+</html>
