--- a/index.html
+++ b/index.html
@@ -3,31 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ShadowPulse-X | WealthMind Trader Edition</title>
+  <title>ShadowPulse-X WealthMind Trader</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div id="container">
-    <h1>ShadowPulse-X</h1>
+    <h1>ShadowPulse-X WealthMind Trader</h1>
+
     <div id="output" class="output"></div>
 
     <input
-      type="text"
       id="commandInput"
-      placeholder="Enter command... (type 'help' for list)"
+      type="text"
+      placeholder="Enter command... (type 'help')"
       autocomplete="off"
+      spellcheck="false"
     />
 
     <div id="mediaPlayer" class="media-player" style="display:none;">
       <iframe
         id="musicFrame"
-        src=""
-        frameborder="0"
+        width="100%"
+        height="80"
+        scrolling="no"
+        frameborder="no"
         allow="autoplay"
-        allowfullscreen
       ></iframe>
-      <div id="musicInfo"></div>
-      <button id="closeMusicBtn">Close Music</button>
+      <div id="musicInfo" class="music-info"></div>
+      <button id="closeMusicBtn" class="btn">Close Music</button>
     </div>
   </div>
 
