--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ShadowPulse-X WealthMind Trader</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div id="container">
-    <h1>ShadowPulse-X WealthMind Trader</h1>
-
-    <div id="output" class="output"></div>
-
-    <input
-      id="commandInput"
-      type="text"
-      placeholder="Enter command... (type 'help')"
-      autocomplete="off"
-      spellcheck="false"
-    />
-
-    <div id="mediaPlayer" class="media-player" style="display:none;">
-      <iframe
-        id="musicFrame"
-        width="100%"
-        height="80"
-        scrolling="no"
-        frameborder="no"
-        allow="autoplay"
-      ></iframe>
-      <div id="musicInfo" class="music-info"></div>
-      <button id="closeMusicBtn" class="btn">Close Music</button>
-    </div>
+<div id="trading-dashboard" style="padding:20px; background:rgba(0,0,0,0.7); color:#eee; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; max-width:400px; margin: 20px auto; border-radius:10px;">
+  <h2 style="text-align:center; margin-bottom:10px;">WealthMind Trader Live</h2>
+  <div>
+    <strong>EUR/USD Price:</strong> <span id="price">Loading...</span>
   </div>
+  <div id="signals-container" style="margin-top:15px;">
+    <!-- Signals appear here -->
+  </div>
+</div>
 
-  <script src="script.js"></script>
-</body>
-</html>
+<style>
+  .signal {
+    padding: 8px 12px;
+    margin: 6px 0;
+    border-radius: 6px;
+    font-weight: 600;
+    font-size: 14px;
+    opacity: 0.85;
+    transition: opacity 0.3s ease;
+  }
+  .signal.buy {
+    background-color: #2ecc71;
+    color: #fff;
+    animation: pulse 1.8s infinite;
+  }
+  .signal.sell {
+    background-color: #e74c3c;
+    color: #fff;
+    animation: pulse 1.8s infinite;
+  }
+  @keyframes pulse {
+    0%, 100% {opacity: 0.85;}
+    50% {opacity: 1;}
+  }
+</style>
