--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ShadowPulse X – Phantom Signals</title>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet"/>
   <style>
@@ -12,6 +12,51 @@
       font-family: 'Share Tech Mono', monospace;
       margin: 0;
       padding: 0;
+      overflow-x: hidden;
+    }
+
+    /* Loader Screen */
+    #loader {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: #0d0d0d;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      line-height: 1.6;
+      color: #888;
+      user-select: none;
+      z-index: 9999;
+      white-space: pre-line;
+    }
+
+    #loader span {
+      display: block;
+      opacity: 0;
+      animation: fadeInOut 2s ease forwards;
+    }
+
+    #loader span:nth-child(1) { animation-delay: 0s; }
+    #loader span:nth-child(2) { animation-delay: 0.7s; }
+    #loader span:nth-child(3) { animation-delay: 1.4s; }
+
+    @keyframes fadeInOut {
+      0% { opacity: 0; }
+      30% { opacity: 1; }
+      100% { opacity: 0; }
+    }
+
+    /* Hide dashboard while loader active */
+    #dashboardContainer {
+      opacity: 0;
+      transition: opacity 0.6s ease;
+    }
+
+    /* Show dashboard */
+    #dashboardContainer.visible {
+      opacity: 1;
     }
 
     header {
@@ -37,6 +82,8 @@
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 1.5rem;
       padding: 2rem;
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
     .signal-card {
@@ -70,14 +117,23 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>SHADOWPULSE-X // SIGNAL DASHBOARD</h1>
-    <p>Encrypted Drops – Phantom Frequency</p>
-  </header>
 
-  <main class="dashboard" id="signalDashboard">
-    <!-- Signal cards will appear here -->
-  </main>
+  <div id="loader" aria-label="Loading screen">
+    <span>Initializing ShadowPulse-X...</span>
+    <span>Authenticating signal feed...</span>
+    <span>Dashboard ready.</span>
+  </div>
+
+  <div id="dashboardContainer" aria-live="polite">
+    <header>
+      <h1>SHADOWPULSE-X // SIGNAL DASHBOARD</h1>
+      <p>Encrypted Drops – Phantom Frequency</p>
+    </header>
+
+    <main class="dashboard" id="signalDashboard" role="region" aria-label="Trading signals">
+      <!-- Signal cards will load here -->
+    </main>
+  </div>
 
   <script>
     async function loadSignals() {
@@ -104,7 +160,21 @@
       });
     }
 
-    loadSignals();
+    // Show dashboard after loader animation
+    window.addEventListener('load', () => {
+      // Wait 2.5s to match loader fade out
+      setTimeout(() => {
+        const loader = document.getElementById('loader');
+        loader.style.display = 'none';
+
+        const dashboard = document.getElementById('dashboardContainer');
+        dashboard.classList.add('visible');
+
+        // Load signals after showing dashboard
+        loadSignals();
+      }, 2500);
+    });
   </script>
+
 </body>
 </html>
