--- a/pricing.html
+++ b/pricing.html
@@ -2,155 +2,141 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pricing Plans</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Phantom Signal Plans | ShadowPulse X</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
-      background: #121212;
-      color: #eee;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      padding: 0;
-    }
-    #pricing {
+      font-family: 'Orbitron', sans-serif;
+      background: #0d0d0d;
+      color: #f5f5f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 60px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
     }
-    #pricing h2 {
-      text-align: center;
-      font-size: 2.5rem;
-      margin-bottom: 40px;
+
+    h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+      color: #00ffd5;
     }
-    .plans {
+
+    p.subtitle {
+      font-size: 1.2em;
+      color: #aaaaaa;
+      margin-bottom: 60px;
+    }
+
+    .pricing-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
+      max-width: 1200px;
+      width: 100%;
     }
+
     .plan {
-      background: #1f1f1f;
-      border-radius: 12px;
-      padding: 30px;
-      flex: 1 1 280px;
-      max-width: 320px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
-      display: flex;
-      flex-direction: column;
-      color: #eee;
-      position: relative;
+      background: #1a1a1a;
+      border: 1px solid #2e2e2e;
+      border-radius: 20px;
+      padding: 40px;
+      flex: 1 1 300px;
+      max-width: 350px;
+      box-shadow: 0 0 15px rgba(0, 255, 213, 0.1);
+      transition: 0.3s ease;
     }
-    .plan.pro {
-      background: linear-gradient(135deg, #9f5fff, #4f00ff);
-      color: #fff;
-      box-shadow: 0 0 25px rgba(159, 95, 255, 0.7);
+
+    .plan:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 0 30px rgba(0, 255, 213, 0.3);
     }
-    .plan.pro .badge {
-      position: absolute;
-      top: -12px;
-      right: -12px;
-      background: #ff4081;
-      color: white;
-      padding: 6px 14px;
-      border-radius: 50px;
-      font-weight: 700;
-      font-size: 0.85rem;
+
+    .plan h2 {
+      font-size: 1.8em;
+      margin-bottom: 20px;
+      color: #00ffd5;
     }
-    .plan h3 {
-      font-size: 1.8rem;
-      margin-bottom: 15px;
-    }
+
     .price {
-      font-size: 2rem;
-      font-weight: 700;
-      margin-bottom: 25px;
+      font-size: 2em;
+      margin: 20px 0;
+      color: #ffffff;
     }
-    .price span {
-      font-weight: 400;
-      font-size: 1rem;
-    }
+
     ul {
       list-style: none;
       padding: 0;
-      margin-bottom: 30px;
-      flex-grow: 1;
+      line-height: 1.8;
+      color: #ccc;
     }
-    li {
-      margin-bottom: 12px;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
+
+    .btn {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 12px 25px;
+      background: #00ffd5;
+      color: #000;
+      font-weight: bold;
       border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: 0.3s;
     }
-    .plan.free button {
-      background: #4caf50;
-      color: #121212;
+
+    .btn:hover {
+      background: #00bfa3;
+      color: #fff;
     }
-    .plan.pro button {
-      background: #fff;
-      color: #4f00ff;
-      font-weight: 700;
-    }
-    .plan.elite button {
-      background: #4caf50;
-      color: #121212;
-    }
-    button:hover {
-      opacity: 0.85;
+
+    @media (max-width: 768px) {
+      .plan {
+        max-width: 100%;
+      }
     }
   </style>
 </head>
 <body>
+  <h1>Choose Your Phantom Access</h1>
+  <p class="subtitle">Unlock premium signals and elite tools. No fluff. Just domination.</p>
 
-  <section id="pricing">
-    <h2>Choose Your Plan</h2>
-    <div class="plans">
-      
-      <div class="plan free">
-        <h3>Free</h3>
-        <p class="price">$0 <span>/ month</span></p>
-        <ul>
-          <li>Basic signals</li>
-          <li>Access to live dashboard</li>
-          <li>Community chat access</li>
-        </ul>
-        <button>Get Started</button>
-      </div>
-      
-      <div class="plan pro">
-        <div class="badge">Popular</div>
-        <h3>Pro</h3>
-        <p class="price">$49 <span>/ month</span></p>
-        <ul>
-          <li>All basic features</li>
-          <li>Real-time sniper signals</li>
-          <li>Priority alerts & notifications</li>
-          <li>Exclusive market analysis</li>
-          <li>Access to premium education</li>
-        </ul>
-        <button>Upgrade Now</button>
-      </div>
-
-      <div class="plan elite">
-        <h3>Elite</h3>
-        <p class="price">$99 <span>/ month</span></p>
-        <ul>
-          <li>All Pro features</li>
-          <li>1-on-1 coaching & mentorship</li>
-          <li>Exclusive trade setups</li>
-          <li>Early access to app features</li>
-          <li>VIP community access</li>
-        </ul>
-        <button>Join Elite</button>
-      </div>
-
+  <div class="pricing-container">
+    <div class="plan">
+      <h2>Phantom Basic</h2>
+      <p class="price">$29/mo</p>
+      <ul>
+        <li>Live Daily Signal</li>
+        <li>Support/Resistance Zones</li>
+        <li>Entry Alerts (1 Pair)</li>
+      </ul>
+      <a href="https://yourpaymentlink.com/basic" class="btn">Join Now</a>
     </div>
-  </section>
 
+    <div class="plan">
+      <h2>Elite Access</h2>
+      <p class="price">$59/mo</p>
+      <ul>
+        <li>All Major FX & Gold Signals</li>
+        <li>Sniper Entry Zones</li>
+        <li>AI Trade Assistant Access</li>
+        <li>Telegram Bot Alerts</li>
+      </ul>
+      <a href="https://yourpaymentlink.com/elite" class="btn">Join Now</a>
+    </div>
+
+    <div class="plan">
+      <h2>Shadow Tier</h2>
+      <p class="price">$99/mo</p>
+      <ul>
+        <li>Everything in Elite</li>
+        <li>1-on-1 Strategy Call Monthly</li>
+        <li>Custom Signal Requests</li>
+        <li>Private Member Vault</li>
+      </ul>
+      <a href="https://yourpaymentlink.com/shadow" class="btn">Join Now</a>
+    </div>
+  </div>
 </body>
 </html>
